# a11yhood

./: LICENSE  README.md  pixi.toml  pyproject.toml
docs/: cli.ipynb
src/a11yhood/: __init__.py  __main__.py  gh.py  github.py  ravelry.py  search.py  thingiverse.py  utils.py
src/a11yhood/gather/: aggregate.ipynb  app.ipynb  at.jsonschema  config.ipynb  github.ipynb  lunr.ipynb  ravelry.ipynb  thingiverse.ipynb
